name the image in the template so it can be updated
The image that will be used is not known ahead of time, so templating
the base layer needs to use a placeholder for the meltano image. Using
"meltano", we can later customize the image in an overlay like so:

images:
  - name: meltano
    newName: myregistry.io/meltano
    newTag: abc123

--- a/kubernetes_ext/templates/cron-job.yml.jinja
+++ b/kubernetes_ext/templates/cron-job.yml.jinja
@@ -24,6 +24,7 @@ spec:
                 sizeLimit: 1Gi
           containers:
             - name: meltano
+              image: meltano
               command:
                 - meltano
                 - {{ cmd }}
