fix meltano env configmap variable name

--- a/kubernetes_ext/templates/config-map.yml.jinja
+++ b/kubernetes_ext/templates/config-map.yml.jinja
@@ -3,4 +3,4 @@ kind: ConfigMap
 metadata:
   name: env
 data:
-  MELTANO_ENVIRONMENT: {{ environment | tojson }}
+  MELTANO_ENV: {{ environment | tojson }}
