Revert "fix meltano env configmap variable name"
This reverts commit 1643e125cfdd3614191755c4cdf78aeb69aaea10.

--- a/kubernetes_ext/templates/config-map.yml.jinja
+++ b/kubernetes_ext/templates/config-map.yml.jinja
@@ -3,4 +3,4 @@ kind: ConfigMap
 metadata:
   name: env
 data:
-  MELTANO_ENV: {{ environment | tojson }}
+  MELTANO_ENVIRONMENT: {{ environment | tojson }}
